Refactor: change in experience section

--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ hr {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 2.5rem;
-  justify-content: space-around;
+  justify-content: left;
 }
 
 article {
