Fix: fixing the CSS file

--- a/style.css
+++ b/style.css
@@ -371,6 +371,14 @@ hr {
   gap: 2.5rem;
   justify-content: left;
 }
+.article-container-img {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: center;
+}
 
 article {
   display: flex;
