Fix: changing style and text of files

--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ hr {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 2.5rem;
-  justify-content: left;
+  justify-content: center;
 }
 .article-container-img {
   display: flex;
