--- a/style.css
+++ b/style.css
@@ -295,6 +295,36 @@ hr {
   margin: 0px 0;
 }
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  z-index: 1;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #cac9c9;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 /* About section */
 
 #about {
